# CSC510-proj3

proj2/backend/: .env.example  Check-key.py  SEEDING_GUIDE.md  authentic_menu_items.csv  pyproject.toml  quick_setup.py
proj2/backend/alembic/: env.py
proj2/backend/alembic/versions/: 013_add_recommendation_feedback_table.py  013_add_website_url_to_restaurants.py  098ec604a001_cleaned_up_migration.py  7919951fa9d1_sync_schema_v2.py  9503d3a1c573_add_orders_table.py  9a022a31aff4_final_changes_merge.py  ada769d0d0a8_add_chat_tables.py  d228de65832d_.py  f2861a6fe3c3_.py  fded39fd92e3_add_location_field_to_users.py
proj2/backend/scripts/: clear_restaurant_data.py  clear_wellness_data.py  seed_menus.py  seed_menus_from_csv.py  seed_restaurants.py
proj2/backend/scripts/db_initialize/: README.md  create_admin_user.py  create_init_database.py  init_allergens.py  seed_restaurants.py  seed_wellness_logs.py  verify_database.py
proj2/backend/scripts/db_initialize/data/: allergens.json  restaurants.json
proj2/backend/src/eatsential/: index.py
proj2/backend/src/eatsential/models/: __init__.py  chat.py  models.py
proj2/backend/src/eatsential/routers/: chat.py  maps.py  orders.py  recommend.py
proj2/backend/tests/: DIVERSITY_TESTS_README.md  README.md  test_chat.py  test_meal_service.py
proj2/backend/tests/integration/: test_recommendation_diversity_integration.py
proj2/backend/tests/routers/: test_maps.py  test_meals_api.py
proj2/backend/tests/schemas/: test_recommendation_schemas.py
proj2/backend/tests/services/: test_recommendation_diversity.py
(+32 files in other folders)
