[project]
name = "eatsential"
version = "0.1.0"
description = "Backend for Eatsential platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "sqlalchemy>=2.0.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "aiosmtplib>=3.0.1",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.9", # For form data handling
    "bcrypt>=4.0.1", # For password hashing
    "pyjwt>=2.10.1",
    "google-genai>=1.47.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "coverage>=7.6.10", "ruff>=0.13.3"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["eatsential"]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.10",
    "pyright>=1.1.407",
]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
